[package]
name = "mysqldump-splitter"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0 or MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.24"
color-eyre="0.6"
clap={version="^3.2", features=["derive"]}
lazy_static="1.4"
regex="1.6"
crossbeam="0.8"